@@ -4,18 +4,20 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.scoula.common.exception.BusinessException;
 import org.scoula.job.domain.JobGoalVO;
-import org.scoula.job.domain.JobInterestedTypeVO;
-import org.scoula.job.domain.JobPlanVO;
-import org.scoula.job.domain.PrepItemCriteriaVO;
-import org.scoula.job.domain.ServiceCriteriaVO;
-import org.scoula.job.dto.JobCodeDTO;
 import org.scoula.job.dto.JobGoalCreateRequestDTO;
 import org.scoula.job.dto.JobGoalCreateResponseDTO;
+import org.scoula.job.dto.JobGoalDetailResponseDTO;
 import org.scoula.job.dto.JobPlanCreateRequestDTO;
 import org.scoula.job.dto.JobPlanCreateResponseDTO;
-import org.scoula.job.dto.JobPlanItemDTO;
 import org.scoula.job.dto.JobProductDTO;
-import org.scoula.job.dto.PrepItemDTO;
+import org.scoula.job.dto.JobTransferMajorDTO;
+import org.scoula.job.dto.JobTransferUniversityDTO;
+import org.scoula.job.domain.JobQualificationVO;
+import org.scoula.job.domain.JobCourseVO;
+import org.scoula.job.domain.JobRecommendServiceVO;
+import org.scoula.job.dto.JobCategoryDTO;
+import org.scoula.job.dto.JobQualificationDTO;
+import org.scoula.job.dto.JobCourseDTO;
 import org.scoula.job.dto.PrepItemRecommendResponseDTO;
 import org.scoula.job.dto.ServiceRecommendResponseDTO;
 import org.scoula.job.mapper.JobMapper;
@@ -23,8 +25,8 @@ import org.scoula.product.service.ProductService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+
 import java.util.ArrayList;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -33,11 +35,11 @@ import java.util.stream.Collectors;
 @Log4j2
 public class JobServiceImpl implements JobService {
 
-    /** 로드맵 카테고리 코드 (roadmap_category) — 여행1 진로2 */
-    private static final int ROADMAP_CATEGORY_JOB = 2;
+    private static final String GOAL_TYPE_EMPLOYMENT = "J01";
+    private static final String GOAL_TYPE_PUBLIC_SERVICE = "J02";
+    private static final String GOAL_TYPE_TRANSFER = "J03";
 
-    /** 서비스 구분 코드 — G01 정부 정책 / G02 KB 금융서비스 */
-    private static final String SERVICE_TYPE_POLICY = "G01";
+    private static final int ROADMAP_CATEGORY_JOB = 2;
 
     private final JobMapper jobMapper;
     private final ProductService productService;
@@ -45,144 +47,216 @@ public class JobServiceImpl implements JobService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<JobCodeDTO> findJobCodes(String goalType) {
-        return this.jobMapper.findJobCodeListByGoalType(goalType).stream()
-                .map(JobCodeDTO::of)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional
-    public JobGoalCreateResponseDTO createJobGoal(JobGoalCreateRequestDTO requestDTO) {
-        // 준비 항목 유형은 필수값이므로 목표 저장 전에 먼저 검증
-        List<String> itemTypes = requestDTO.getItemTypes();
-        if (itemTypes == null || itemTypes.isEmpty()) {
-            throw BusinessException.badRequest("준비항목 유형을 1개 이상 선택해주세요", "JOB_005");
-        }
-
-        JobGoalVO jobGoalVO = new JobGoalVO();
-        jobGoalVO.setUserId(requestDTO.getUserId());
-        jobGoalVO.setGoalType(requestDTO.getGoalType());
-        jobGoalVO.setJobCodeId(requestDTO.getJobCodeId());
-        jobGoalVO.setExpectedDate(requestDTO.getExpectedDate());
-
-        this.jobMapper.insertJobGoal(jobGoalVO);
-
-        // 선택된 준비 항목(P01/P02/P03)을 goal_id 기준으로 각 한 줄씩 저장
-        // job_goal insert와 같은 @Transactional 범위 안이라, 중간에 실패하면 전체 롤백됨
-        for (String itemType : itemTypes) {
-            JobInterestedTypeVO jobInterestedTypeVO = new JobInterestedTypeVO();
-            jobInterestedTypeVO.setGoalId(jobGoalVO.getGoalId());
-            jobInterestedTypeVO.setItemType(itemType);
-            // TODO: JWT 미연동으로 인해 job_goal insert와 동일하게 임시로 userId를 문자열로 기록
-            jobInterestedTypeVO.setCreatedNm(String.valueOf(requestDTO.getUserId()));
-            this.jobMapper.insertJobInterestedType(jobInterestedTypeVO);
-        }
-
-        return new JobGoalCreateResponseDTO(jobGoalVO.getGoalId());
+    public List<JobCategoryDTO> findCategoryList(String goalType) {
+        return this.jobMapper.findCategoryListByGoalType(goalType)
+                .stream()
+                .map(JobCategoryDTO::of)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public PrepItemRecommendResponseDTO findPrepItemRecommend(Long goalId) {
-        JobGoalVO jobGoalVO = this.jobMapper.findJobGoal(goalId);
-        if (jobGoalVO == null) {
-            throw BusinessException.notFound("진로 목표를 찾을 수 없습니다", "JOB_001");
-        }
-
-        List<String> itemTypes = this.jobMapper.findInterestedItemTypeList(goalId);
-
-        // 목표 등록 시 준비 항목 유형을 필수로 받으므로 정상 흐름에서는 비어 있을 수 없음
-        if (itemTypes.isEmpty()) {
-            throw BusinessException.notFound("준비항목 유형이 선택되지 않았습니다", "JOB_002");
-        }
-
-        List<PrepItemCriteriaVO> prepItemCriteriaVOList = this.jobMapper.findPrepItemCriteriaList(
-                jobGoalVO.getGoalType(),
-                jobGoalVO.getJobCodeId(),
-                itemTypes
-        );
-
-        // item_type(P01/P02/P03) 별로 그룹핑
-        LinkedHashMap<String, List<PrepItemDTO>> groupedItems = prepItemCriteriaVOList.stream()
-                .map(PrepItemDTO::of)
-                .collect(Collectors.groupingBy(
-                        PrepItemDTO::getItemType,
-                        LinkedHashMap::new,
-                        Collectors.toList()
-                ));
-
-        return new PrepItemRecommendResponseDTO(goalId, groupedItems);
+    public List<JobTransferUniversityDTO> findTransferUniversityList() {
+        return this.jobMapper.findTransferUniversityList()
+                .stream()
+                .map(JobTransferUniversityDTO::of)
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
+    public List<JobTransferMajorDTO> findTransferMajorList(Long univId) {
+        return this.jobMapper.findTransferMajorListByUnivId(univId)
+                .stream()
+                .map(JobTransferMajorDTO::of)
+                .toList();
+    }
+
+    // 목표 등록
+    @Override
     @Transactional
-    public JobPlanCreateResponseDTO createJobPlans(Long goalId, JobPlanCreateRequestDTO requestDTO) {
+    public JobGoalCreateResponseDTO createJobGoal(JobGoalCreateRequestDTO requestDTO) {
 
-        JobGoalVO jobGoalVO = this.jobMapper.findJobGoal(goalId);
-        if (jobGoalVO == null) {
-            throw BusinessException.notFound("진로 목표를 찾을 수 없습니다", "JOB_001");
+        JobGoalVO jobGoalVO = new JobGoalVO();
+        jobGoalVO.setUserId(requestDTO.getUserId());
+        jobGoalVO.setGoalType(requestDTO.getGoalType());
+        jobGoalVO.setCategoryId(requestDTO.getCategoryId());
+        jobGoalVO.setUnivId(requestDTO.getUnivId());
+        jobGoalVO.setMajorId(requestDTO.getMajorId());
+        jobGoalVO.setExpectedDate(requestDTO.getExpectedDate());
+        jobGoalVO.setCreatedNm(String.valueOf(requestDTO.getUserId()));
+
+        this.jobMapper.insertJobGoal(jobGoalVO);
+
+        return new JobGoalCreateResponseDTO(jobGoalVO.getGoalId());
+    }
+
+    // 준비항목 추천 조회
+    @Override
+    @Transactional(readOnly = true)
+    public PrepItemRecommendResponseDTO findPrepItemRecommend(Long goalId) {
+        JobGoalVO jobGoalVO = this.findJobGoalOrThrow(goalId);
+
+        List<JobQualificationVO> qualificationVOList;
+        List<JobCourseVO> courseVOList = List.of();
+
+        if (GOAL_TYPE_EMPLOYMENT.equals(jobGoalVO.getGoalType())) {
+            qualificationVOList = this.jobMapper.findQualificationListByCategoryId(jobGoalVO.getCategoryId());
+
+            List<Long> qualIds = qualificationVOList.stream().map(JobQualificationVO::getQualId).toList();
+            courseVOList = this.jobMapper.findCourseListByQualificationIds(qualIds);
+
+        } else if (GOAL_TYPE_PUBLIC_SERVICE.equals(jobGoalVO.getGoalType())) {
+            qualificationVOList = this.jobMapper.findQualificationListByCategoryId(jobGoalVO.getCategoryId());
+
+            courseVOList = this.jobMapper.findCourseListByCategoryId(jobGoalVO.getCategoryId());
+
+        } else if (GOAL_TYPE_TRANSFER.equals(jobGoalVO.getGoalType())) {
+            qualificationVOList = this.jobMapper.findQualificationListByMajorId(jobGoalVO.getMajorId());
+
+            courseVOList = this.jobMapper.findCourseListByMajorId(jobGoalVO.getMajorId());
+
+        } else {
+            throw BusinessException.badRequest("올바르지 않은 목표유형입니다", "JOB_008");
         }
 
-        List<Long> prepCritIds = requestDTO.getPrepCritIds();
-        if (prepCritIds == null || prepCritIds.isEmpty()) {
-            throw BusinessException.badRequest("준비항목을 1개 이상 선택해주세요", "JOB_003");
-        }
+        List<JobQualificationDTO> qualifications =qualificationVOList.stream()
+                .map(JobQualificationDTO::of)
+                .toList();
 
-        List<PrepItemCriteriaVO> criteriaList = this.jobMapper.findPrepItemCriteriaListByIds(prepCritIds);
-        if (criteriaList.size() != prepCritIds.size()) {
-            throw BusinessException.notFound("존재하지 않는 준비항목이 포함되어 있습니다", "JOB_004");
-        }
 
-        List<JobPlanVO> jobPlans = criteriaList.stream()
-                .map(criteria -> {
-                    JobPlanVO plan = new JobPlanVO();
-                    plan.setGoalId(goalId);
-                    plan.setItemType(criteria.getItemType());
-                    plan.setItemName(criteria.getItemName());
-                    plan.setInfoUrl(criteria.getInfoUrl());
-                    plan.setApplyUrl(criteria.getApplyUrl());
-                    plan.setAmount(criteria.getAmount());
-                    return plan;
-                })
-                .collect(Collectors.toList());
+        List<JobCourseDTO> courses = courseVOList.stream().map(JobCourseDTO::of).toList();
 
-        // TODO: JWT 미연동으로 인해 임시로 userId를 문자열로 기록
-        String userName = String.valueOf(jobGoalVO.getUserId());
-
-        // 스냅샷 방식이므로 재선택 시 기존 항목을 소프트 삭제하고 다시 저장
-        this.jobMapper.deleteJobPlanListByGoalId(goalId, userName);
-        this.jobMapper.insertJobPlanList(jobPlans, userName);
-
-        // amount는 nullable이므로 값이 없는 항목은 0으로 계산
-        long totalAmount = jobPlans.stream()
-                .mapToLong(plan -> plan.getAmount() == null ? 0L : plan.getAmount())
-                .sum();
-
-        List<JobPlanItemDTO> items = jobPlans.stream()
-                .map(JobPlanItemDTO::of)
-                .collect(Collectors.toList());
-
-        return JobPlanCreateResponseDTO.builder()
+        return PrepItemRecommendResponseDTO.builder()
                 .goalId(goalId)
-                .totalAmount(totalAmount)
-                .items(items)
+                .goalType(jobGoalVO.getGoalType())
+                .qualifications(qualifications)
+                .courses(courses)
                 .build();
     }
 
+    // 선택한 준비항목 저장
+    @Override
+    @Transactional
+    public JobPlanCreateResponseDTO createJobPlans(Long goalId, JobPlanCreateRequestDTO requestDTO) {
+        JobGoalVO jobGoalVO = this.findJobGoalOrThrow(goalId);
+
+        List<Long> qualIds = requestDTO.getQualIds();
+        List<Long> courseIds = requestDTO.getCourseIds();
+
+        boolean hasQualification = qualIds != null && !qualIds.isEmpty();
+        boolean hasCourse = courseIds != null && !courseIds.isEmpty();
+
+        if (!hasQualification && !hasCourse) {
+            throw BusinessException.badRequest("준비항목을 1개 이상 선택해주세요", "JOB_003");
+        }
+
+        List<JobQualificationVO> qualificationVOList = hasQualification
+                ? this.jobMapper.findQualificationListByIds(qualIds)
+                : List.of();
+
+        List<JobCourseVO> courseVOList = hasCourse
+                ? this.jobMapper.findCourseListByIds(courseIds)
+                : List.of();
+
+        if (hasQualification && qualificationVOList.size() != qualIds.size()) {
+            throw BusinessException.notFound("존재하지 않는 자격증·어학이 포함되어 있습니다", "JOB_004");
+        }
+
+        if (hasCourse && courseVOList.size() != courseIds.size()) {
+            throw BusinessException.notFound("존재하지 않는 인강이 포함되어 있습니다", "JOB_004");
+        }
+
+        String userName = String.valueOf(jobGoalVO.getUserId());
+
+        this.jobMapper.deleteGoalQualificationByGoalId(goalId, userName);
+        this.jobMapper.deleteGoalCourseByGoalId(goalId, userName);
+
+        if (hasQualification) {
+            this.jobMapper.insertGoalQualificationList(goalId, qualIds, userName);
+        }
+
+        if (hasCourse) {
+            this.jobMapper.insertGoalCourseList(goalId, courseIds, userName);
+        }
+
+        return JobPlanCreateResponseDTO.builder()
+                .goalId(goalId)
+                .qualifications(qualificationVOList.stream().map(JobQualificationDTO::of).toList())
+                .courses(courseVOList.stream().map(JobCourseDTO::of).toList())
+                .build();
+    }
+
+    // 정책·금융상품 추천 조회
     @Override
     @Transactional(readOnly = true)
     public ServiceRecommendResponseDTO findServiceRecommend(Long goalId) {
         JobGoalVO jobGoalVO = this.findJobGoalOrThrow(goalId);
 
-        List<ServiceCriteriaVO> criteriaList =
-                this.jobMapper.findServiceCriteriaListByGoalType(jobGoalVO.getGoalType());
+        List<JobRecommendServiceVO> serviceVOList =
+                this.jobMapper.findRecommendServiceListByGoalType(jobGoalVO.getGoalType());
+
+        List<JobProductDTO> policies = serviceVOList.stream()
+                .filter(service -> "P01".equals(service.getServiceType()))
+                .map(JobProductDTO::ofService)
+                .toList();
+
+        List<JobProductDTO> financialProducts = serviceVOList.stream()
+                .filter(service -> "P02".equals(service.getServiceType()))
+                .map(JobProductDTO::ofService)
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        this.productService.findCardProductListByCategory(ROADMAP_CATEGORY_JOB).stream()
+                .map(JobProductDTO::ofCard)
+                .forEach(financialProducts::add);
 
         return ServiceRecommendResponseDTO.builder()
                 .goalId(goalId)
-                .policies(this.toPolicies(criteriaList))
-                .financialProducts(this.toFinancialProducts(criteriaList))
+                .policies(policies)
+                .financialProducts(financialProducts)
                 .build();
+    }
+
+    // 진로 목표 상세 조회
+    @Override
+    @Transactional(readOnly = true)
+    public JobGoalDetailResponseDTO findJobGoalDetail(Long goalId) {
+
+        // 목표 기본정보 + 직무·직렬명 + 대학명 + 학과계열명 조회
+        JobGoalDetailResponseDTO detail =
+                this.jobMapper.findJobGoalDetail(goalId);
+
+        if (detail == null) {
+            throw BusinessException.notFound(
+                    "진로 목표를 찾을 수 없습니다",
+                    "JOB_001"
+            );
+        }
+
+        // 목표에 저장된 자격증·어학 조회
+        List<JobQualificationDTO> qualifications =
+                this.jobMapper.findSelectedQualificationListByGoalId(goalId)
+                        .stream()
+                        .map(JobQualificationDTO::of)
+                        .toList();
+
+        // 목표에 저장된 인강 조회
+        List<JobCourseDTO> courses =
+                this.jobMapper.findSelectedCourseListByGoalId(goalId)
+                        .stream()
+                        .map(JobCourseDTO::of)
+                        .toList();
+
+        // 목표유형에 맞는 정책·KB 서비스 추천 조회
+        ServiceRecommendResponseDTO services =
+                this.findServiceRecommend(goalId);
+
+        detail.setQualifications(qualifications);
+        detail.setCourses(courses);
+        detail.setPolicies(services.getPolicies());
+        detail.setFinancialProducts(services.getFinancialProducts());
+
+        return detail;
     }
 
     // 진로 목표를 조회하고 존재하지 않으면 예외를 던진다
@@ -194,25 +268,26 @@ public class JobServiceImpl implements JobService {
         return jobGoalVO;
     }
 
-    // 정부 정책(G01)만 골라 정책 목록으로 변환한다
-    private List<JobProductDTO> toPolicies(List<ServiceCriteriaVO> criteriaList) {
-        return criteriaList.stream()
-                .filter(criteria -> SERVICE_TYPE_POLICY.equals(criteria.getServiceType()))
-                .map(JobProductDTO::ofService)
-                .toList();
+    private long calculateQualificationCost(JobQualificationVO qualificationVO) {
+        if (qualificationVO.getMilitaryFee() != null) {
+            return qualificationVO.getMilitaryFee();
+        }
+
+        long writtenFee = qualificationVO.getWrittenFee() == null ? 0L : qualificationVO.getWrittenFee();
+        long practicalFee = qualificationVO.getPracticalFee() == null ? 0L : qualificationVO.getPracticalFee();
+
+        return writtenFee + practicalFee;
     }
 
-    // KB 금융서비스(G02)와 카드 상품을 하나의 금융상품 목록으로 합친다
-    private List<JobProductDTO> toFinancialProducts(List<ServiceCriteriaVO> criteriaList) {
-        List<JobProductDTO> financialProducts = criteriaList.stream()
-                .filter(criteria -> !SERVICE_TYPE_POLICY.equals(criteria.getServiceType()))
-                .map(JobProductDTO::ofService)
-                .collect(Collectors.toCollection(ArrayList::new));
+    private long calculateCourseCost(JobCourseVO courseVO) {
+        if (courseVO.getMilitaryPrice() != null) {
+            return courseVO.getMilitaryPrice();
+        }
 
-        this.productService.findCardProductListByCategory(ROADMAP_CATEGORY_JOB).stream()
-                .map(JobProductDTO::ofCard)
-                .forEach(financialProducts::add);
+        if (courseVO.getDiscountPrice() != null) {
+            return courseVO.getDiscountPrice();
+        }
 
-        return financialProducts;
+        return courseVO.getOriginalPrice() == null ? 0L : courseVO.getOriginalPrice();
     }
 }
